RESOLVED FIXED211542
REGRESSION(r260689): "Caused regressions deleting text and filling password fields" (Requested by ddkilzer on #webkit).
https://bugs.webkit.org/show_bug.cgi?id=211542
Summary REGRESSION(r260689): "Caused regressions deleting text and filling password f...
WebKit Commit Bot
Reported 2020-05-06 18:54:57 PDT
https://trac.webkit.org/changeset/260689 broke the build: "Caused regressions deleting text and filling password fields" (Requested by ddkilzer on #webkit). This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r260689 (2.30 KB, patch)
2020-05-06 18:55 PDT, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2020-05-06 18:55:00 PDT
Created attachment 398694 [details] REVERT of r260689 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
David Kilzer (:ddkilzer)
Comment 2 2020-05-06 19:04:00 PDT
Waiting for EWS builds to finish.
David Kilzer (:ddkilzer)
Comment 3 2020-05-06 19:12:45 PDT
Comment on attachment 398694 [details] REVERT of r260689 Marking cq+ with ios, ios-sim and mac built. I assume mac-debug will succeed.
EWS
Comment 4 2020-05-06 19:13:48 PDT
Committed r261263: <https://trac.webkit.org/changeset/261263> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398694 [details].
Radar WebKit Bug Importer
Comment 5 2020-05-06 19:14:17 PDT
Note You need to log in before you can comment on or make changes to this bug.