Cherry-pick r261263. rdar://problem/62995496

Unreviewed, reverting r260689.
    https://bugs.webkit.org/show_bug.cgi?id=211542

    "Caused regressions deleting text and filling password fields"
    (Requested by ddkilzer on #webkit).

    Reverted changeset:

    "WebPasteboardProxy::getPasteboardStringsForType() and
    WebPasteboardProxy::readURLFromPasteboard() should check
    return value of SharedMemory::createHandle()"
    https://bugs.webkit.org/show_bug.cgi?id=211002
    https://trac.webkit.org/changeset/260689

    Canonical link: https://commits.webkit.org/224436@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261263 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/224232.10@safari-610.1.12-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.12-branch@261353 268f45cc-cd09-0410-ab3c-d52691b4dbfc